<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Domotique</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">Confirmer</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="shutter">Volets</string>
    <string name="light">Eclairages</string>
    <string name="thermique">Thermiques</string>
    <string name="room">boite a lettre </string>
    <string name="setting">Camera</string>
    <string name="title_activity_shutter">Shutter</string>
    <string name="title_activity_shutters">Shutters</string>
    <string name="title_activity_ligh">Ligh</string>
    <string name="title_activity_lights">Lights</string>
    <string name="title_activity_rooms">Rooms</string>
    <string name="title_activity_thermiques">Thermiques</string>
    <string name="title_maison_list">Items</string>
    <string name="title_maison_detail">Maison Detail</string>
    <string name="title_activity_maison">Maison</string>
    <string name="title_activity_letter">Letter</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_detail_letter">DetailLetter</string>

</resources>
